always enable preview feature in jshell if java 11+ is used