@@ -1,5 +1,7 @@
 package com.github.forax.pro.main;
 
+import static java.lang.Runtime.version;
+
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Optional;
@@ -20,6 +22,7 @@ public class JShellConfigRunner implements ConfigRunner {
     
     var args =
       Stream.of(
+        Stream.of("-R--enable-preview").filter(__ -> version().feature() >= 11),  // always enable preview features if Java 11
         Stream.of("-R-XX:+EnableValhalla").filter(__ -> System.getProperty("valhalla.enableValhalla") != null),
         Stream.of("-R-Dpro.exitOnError=false"),
         propertySeq.stream().map(entry -> "-D" + entry.getKey() + '=' + entry.getValue()),
